# gen-html

./: .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  test.html
.github/workflows/: ci.yml  doc.yml  rust.yml
gen-html/: Cargo.toml
gen-html-proc/: Cargo.toml
gen-html-proc/src/: ast.rs  error.rs  escape.rs  generate.rs  lib.rs  parse.rs  tags.rs
gen-html/src/: escape.rs  lib.rs  render.rs  value.rs  web.rs
src/: attribute.rs  attrs.rs  content.rs  edits.rs  element.rs  gen.rs  generate.rs  html.rs  inline_text.rs  lib.rs  marker.rs  root.rs  text_content.rs
src/attribute/: rel.rs
