[package]
name = "gen-html"
authors = ["Robert Poznański"]
version = "0.2.0"
edition = "2024"

license = "MIT"
description = "Generate HTML using Rust"
repository = "https://github.com/din0x/gen-html"

keywords = ["html", "web"]
categories = ["template-engine", "web-programming"]

[dependencies]
gen-html-proc = { version = "0.1.0", path = "../gen-html-proc" }
axum = { version = "0.8.4", optional = true }
actix-web = { version = "4.11.0", optional = true }

[features]
axum = ["dep:axum"]
actix-web = ["dep:actix-web"]
